--- a/prediction_app/templates/base.html
+++ b/prediction_app/templates/base.html
@@ -45,6 +45,7 @@
 
         .navbar-brand {
             color: #000000;
+            font-size: 1.3em;
         }
 
         .navbar-brand:hover {
@@ -85,20 +86,6 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="#">ProjectCicleR</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Try our model</a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
