--- a/prediction_app/templates/index.html
+++ b/prediction_app/templates/index.html
@@ -22,15 +22,12 @@
         </svg>
         <div class="hero_section">
             <h1 class="title">Everyone deserves a clean environment</h1>
-            <p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident facilis
-                tempora
-                officiis
-                dolores quidem blanditiis nam, itaque ea magnam perferendis quia quasi! Veniam impedit</p>
 
             <div class="button_container">
                 <button class="btn btn-success btn-lg primary_button">Start segregating</button>
-                <a href="https://github.com/techSash/Waste-classification.git"
-                    class="btn btn-outline-success btn-lg secondary_button">Github</a>
+                <button onclick="location.href='https://github.com/techSash/Waste-classification.git'" type="button"
+                
+                    class="btn btn-outline-success btn-lg secondary_button">Github</button>
             </div>
         </div>
     </div>
@@ -45,39 +42,36 @@
         <h1 class="about_section_title">What we are trying to do</h1>
         <div class="break"></div>
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card">
                     <div style="width:100%; text-align:center">
                         <img src="{% static 'images/card1.png' %}" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <p class="card-text">Improper waste disposal of hazardous waste can lead to respiratory issues,
+                            heart diseases and even cancer</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card">
                     <div style="width:100%; text-align:center">
                         <img src="{% static 'images/card2.png' %}" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <p class="card-text">Our AI trained on images of organic and recyclable waste can be used to
+                            segregate waste quickly</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card">
                     <div style="width:100%; text-align:center">
                         <img src="{% static 'images/card3.png' %}" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <p class="card-text">Fast, robust, can be implemented physically, and most importantly helps the
+                            environment.</p>
                     </div>
                 </div>
             </div>
